tests/invalid/bad_bit_imm.s
  and r0, r0, 0xAAAAAAA